# mistill

./: LICENSE  README.md  continue-train-failures.sh  gen_data.sh  plot_results.py  present.py  test_embeddings.py
avxnn/: CMakeLists.txt  avx.cpp  chronobench.cpp  user_space.cpp
data_gen/: link_failures.py  spf_only_data.py
dataprep/: attn_prior.py  datasets.py  hierarchical_graphs.py  input_output.py  link_failures.py  sp_prep.py  test_data_prep.py  test_input_output.py  test_link_failures.py  utils.py
dc-mininet-emulation/: Readme.md  mcast.py  plot_info.py  read_stats.py  set_link_up_down.py  track_hnsa_nn_info.py
dc-mininet-emulation/cpp/: CMakeLists.txt  main.cpp
dc-mininet-emulation/topos/: nwx.py
docker/: Dockerfile_torch  run-container.sh
ebpf/: Makefile  README.md  add_routes.py  auto.py  bpf_helpers.h  mpls.c  mpls.h  send_packets.py
ebpf/read/: kernel_time_read.cpp  read_dest_ips.cpp  read_flw_tbl.cpp  read_net_stt.cpp  read_nn_labels.cpp  user_time_read.cpp
embeddings/: arbitrary.py  composed.py  defaults.py  es.py  helper.py  learned.py  node2vec_walk.py  test_defaults.py
eval/: eval_hlsas.py  lf_eval.py  sp_eval.py  utils.py
layers/: attn.py  test_attn.py
models/: sponly.py  stateful.py  test_sponly.py  test_stateful.py  test_utils.py  utils.py
scripts/: baseline.py  to_torchscript_model.py
topos/: fattree.py  test_fat_tree.py
training/: continue_statefule.py  separate_sensors.py  sp_training.py  stateful.py  utils.py
